# gitg

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Allow-revwalk-to-traverse-shallow-clones.patch  CONTRIBUTING.md  Disable-cached-hunks.patch  MAINTAINERS  Makefile.am  Mark-GtkTextIter-as-inout-parameters.patch  NEWS  PACKAGING  README  README.md  allow-up-to-2-invalid-segments.patch  autogen.sh  commit-messages.json  configure.ac  egg-flow-box-uninstalled.pc.in  egg-flow-box.c  egg-flow-box.h  egg-list-box-accessible.c  egg-list-box.c  egg-list-box.h  egg-list-box.vala  egglistbox.vapi  git.mk  gitg.doap  icons.mk  libgitg-1.0.pc.in  libgitg.map  libvaladoc-Allow-disabling-the-graphviz-dependency.patch  meson.build  meson_options.txt  meson_post_install.py  org.gnome.Gitg.json  org.gnome.gitg.json  org.gnome.gitgDevel.json  sub.mk  (+5 more)
contrib/ide/: Makefile.am  ide-doap.c  ide.h  ide.vapi  meson.build
contrib/xml/: Makefile.am  meson.build  xml-reader.c
data/: .gitignore  Makefile.am  gitg-glade.xml  gitg.1  gitg.appdata.xml  gitg.appdata.xml.in  gitg.desktop.in  gitg.desktop.in.in  gitg.schemas.in  gitgdiff.lang  gitgstyle.xml  meson.build  org.gnome.gitg.appdata.xml.in  org.gnome.gitg.appdata.xml.in.in  org.gnome.gitg.desktop.in  org.gnome.gitg.desktop.in.in  org.gnome.gitg.gschema.xml.in  org.gnome.gitg.gschema.xml.in.in  org.gnome.gitg.metainfo.xml.in.in
data/icons/: Makefile.am  meson.build
data/styles/: Adwaita-dark.xml  Adwaita.xml  classic-dark.xml  cobalt-light.xml  kate-dark.xml  styles.pot
gitg/: .gitignore  Makefile  Makefile.am  gitg-action-support.vala  gitg-activatable.c  gitg-activatable.h  gitg-add-remote-action-dialog.vala  gitg-add-remote-action.vala  gitg-add-remote-dialog.vala  gitg-animated-paned.vala  gitg-application.vala  gitg-author-details-dialog.vala  gitg-autohide-frame.vala  gitg-avatar-cache.c  gitg-avatar-cache.h  gitg-blame-renderer.c  gitg-blame-renderer.h  gitg-branch-actions.c  gitg-branch-actions.h  gitg-builder.vala  gitg-cell-renderer-path.c  gitg-cell-renderer-path.h  gitg-changed-file.c  gitg-changed-file.h  gitg-checkout-remote-branch-dialog.vala  gitg-clone-dialog.vala  gitg-color.c  gitg-color.h  gitg-commit-action-checkout.vala  gitg-commit-action-cherry-pick.vala  gitg-commit-action-create-branch.vala  gitg-commit-action-create-patch.vala  gitg-commit-action-create-tag.vala  gitg-commit-action-push.vala  gitg-commit-menu.ui  gitg-commit-view.c  gitg-commit-view.h  gitg-commit.c  gitg-commit.h  gitg-config.c  (+144 more)
gitg/commit/: TODO.md  gitg-commit-dialog.vala  gitg-commit-paned.vala  gitg-commit-sidebar.vala  gitg-commit-submodule-diff-view.vala  gitg-commit-submodule-history-view.vala  gitg-commit-submodule-info.vala  gitg-commit.vala
gitg/history/: gitg-history-action-interface.vala  gitg-history-command-line.vala  gitg-history-list-dnd.vala  gitg-history-navigation.vala  gitg-history-paned.vala  gitg-history-refs-list.vala  gitg-history.vala
gitg/preferences/: gitg-preferences-commit.vala  gitg-preferences-dialog.vala  gitg-preferences-diff.vala  gitg-preferences-general.vala  gitg-preferences-history.vala  gitg-preferences-interface.vala
gitg/resources/: gitg-rebase-window.ui  (+6 more)
libgitg/: .gitg-diff-view.vala.swp  Makefile  Makefile.am  gitg-assembly-info.vala  gitg-async.vala  gitg-authentication-dialog.vala  gitg-avatar-cache.vala  gitg-branch-base.vala  gitg-branch.vala  gitg-cell-renderer-lanes.vala  gitg-color.h  gitg-color.vala  gitg-command.c  gitg-command.h  gitg-commit-list-view.vala  gitg-commit-model.vala  gitg-commit.c  gitg-commit.h  gitg-commit.vala  gitg-config.c  gitg-config.h  gitg-convert.c  gitg-convert.h  gitg-credentials-manager.vala  gitg-dash-view.vala  gitg-date.vala  gitg-debug.c  gitg-debug.h  gitg-diff-image-composite.vala  gitg-diff-image-difference.vala  gitg-diff-image-overlay.vala  gitg-diff-image-side-by-side.vala  gitg-diff-image-slider.vala  gitg-diff-image-surface-cache.vala  gitg-diff-model.vala  gitg-diff-selectable.vala  gitg-diff-stat.vala  gitg-diff-view-commit-details.vala  gitg-diff-view-file-info.vala  gitg-diff-view-file-renderer-binary.vala  (+77 more)
libgitg-ext/: GitgExt.py  Makefile  Makefile.am  gitg-ext-action-interface.vala  gitg-ext-action.vala  gitg-ext-activity.vala  gitg-ext-application.vala  gitg-ext-assembly-info.vala  gitg-ext-command-line.vala  gitg-ext-command-lines.vala  gitg-ext-commit-action.vala  gitg-ext-fetch-avoid-tags.vala  gitg-ext-history-panel.vala  gitg-ext-history.vala  gitg-ext-message-bus.vala  gitg-ext-message-id.vala  gitg-ext-message.vala  gitg-ext-navigation-tree-view.vala  gitg-ext-navigation.vala  gitg-ext-notification.vala  gitg-ext-notifications.vala  gitg-ext-object-selection.vala  gitg-ext-panel.vala  gitg-ext-preferences.vala  gitg-ext-ref-action-interface.vala  gitg-ext-ref-action.vala  gitg-ext-remote-lookup.vala  gitg-ext-searchable.vala  gitg-ext-selectable.vala  gitg-ext-ui-element.vala  gitg-ext-ui.vala  gitg-ext-user-query.vala  gitg-ext-view.vala  libgitg-ext-1.0.pc.in  meson.build
libgitg-gtk/: Makefile.am  gitg-gtk-assembly-info.vala  gitg-gtk-cell-renderer-lanes.vala  gitg-gtk-commit-list-view.vala  gitg-gtk-commit-model.vala  gitg-gtk-dash-view.vala  gitg-gtk-diff-view-request-diff.vala  gitg-gtk-diff-view-request-resource.vala  gitg-gtk-diff-view-request.vala  gitg-gtk-diff-view.vala  gitg-gtk-label-renderer.vala  gitg-gtk-progress-bin.vala  gitg-gtk-when-mapped.vala  libgitg-gtk-1.0.pc.in  test.vala
plugins/: Makefile  Makefile.am  meson.build
tests/: Makefile  Makefile.am  dash-view.vala  diff-view.vala  meson.build  progress-bin.vala  repository-list-box.vala  shell.c
tools/: Makefile.am  gitg-config.c  gitg-shell.c
vapi/: GDesktopEnums-3.0.metadata  Makefile.am  WebKit-3.0.gir  config.vapi  gdesktop-enums-3.0.vapi  gio-windows-2.0.vapi  gitg-js-utils.vapi  gitg-platform-support.vapi  glib-2.0.vapi  gobject-introspection-1.0.vapi  gpg-error.vapi  gpgme.vapi  gsettings-desktop-schemas.vapi  gspell-1.vapi  gtksourceview-3.0.vapi  libpeas-1.0.vapi  libsoup-2.4.vapi  webkit2gtk-3.0.vapi  webkitgtk-3.0.vapi
(+277 files in other folders)
